# nnf

./: .gitignore  CMakeLists.txt  Makefile  README.md  copy.cpp
.cache/clangd/index/: activation_test.cpp.0ED38C37A049324D.idx  activations.cpp.9E2720779E36D975.idx  loss.cpp.45A7095B48BBB1B6.idx  loss_test.cpp.C6F819C2CD90BF89.idx  tensor.cpp.78CA76EA8AD42740.idx  tensor_test.cpp.5B169FE21FDCA132.idx
.github/workflows/: build.yaml
datasets/: adder.csv  diabetes.csv  diabetesnotes.txt  points.csv  quadratic.csv  test.csv  testd.csv
include/: .loss.hpp.swp  .matrix.hpp.swp  activations.hpp  all.hpp  dataset.hpp  doublesubscript.hpp  generic.hpp  layer.hpp  loss.hpp  matrix.hpp  neuralnetwork.hpp  tensor.hpp
models/: a.out  adder.cpp  diabetes.cpp  gates.cpp  lineregnn.cpp  lineregression.cpp  main.cpp  mnist.cpp  nn.cpp  nnxor.cpp  notesonxor.txt  quadratic.cpp  xor.cpp
models/gates/: and.cpp  notesonxor.txt
notes/: regularization.txt
scripts/: labeltop.cpp
src/: activations.cpp  dataset.cpp  doublesubscript.cpp  generic.cpp  layer.cpp  loss.cpp  matrix.cpp  neuralnetwork.cpp  tensor.cpp
tests/: activation_test.cpp  layer_test.cpp  loss_test.cpp  mattest.cpp  tensor_test.cpp  test  test.cpp  tests  tests.cpp
